--- a/kar/pom.xml
+++ b/kar/pom.xml
@@ -3,6 +3,15 @@
   <groupId>kar</groupId>
   <artifactId>kar</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>3.6.2</version>
+    <configuration>
+        <mainClass>Test1</mainClass> <!-- Include package if exists -->
+    </configuration>
+  </plugin>
   
   <dependencies>
     <dependency>
@@ -16,5 +25,6 @@
         <version>5.5.0</version>
     </dependency>
   </dependencies>
+
 
 </project>
